fabrik/internal/engine/testdata/jobs_worker_errors.txt
//fabrik:jobs:worker must be on a package function that returns
jobs.RuntimeConfig; any other return type is an error.
-- go.mod --
module app

go 1.26
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- shared/shared.go --
package shared

//fabrik:jobs:worker
func Worker() error { return nil }
-- want/diags --
error: shared/shared.go:3:1: //fabrik:jobs:worker function Worker must return jobs.RuntimeConfig or (jobs.RuntimeConfig, error)
  help: example: func JobsWorker(cfg *JobsConfig) jobs.RuntimeConfig
